spring-boot-demo/deployment.yaml
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: spring-boot-demo
  labels:
    app: spring-boot-demo
spec:
  selector:
    matchLabels:
      app: spring-boot-demo
  replicas: 1
  template:
    metadata:
      labels:
        app: spring-boot-demo
    spec:
      containers:
        - name: spring-boot-demo
          image: ghcr.io/marknazareno/spring-boot-demo:latest
          ports:
            - containerPort: 8080
