spring-boot-demo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  labels:
    app: spring-boot-demo
spec:
  # We want to make sure that by default our application is not exposed
  type: ClusterIP 
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app: spring-boot-demo
