spring-boot-demo/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spring-boot-demo-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt"
spec:
  tls:
  - hosts:
    - spring-boot-demo.app.k8s.marknazareno.com
    secretName: letsencrypt-staging
  rules:
  - host: spring-boot-demo.app.k8s.marknazareno.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: spring-boot-demo
            port:
              number: 8080
